--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -5,6 +5,8 @@
 
 .bgimg-1 {
   background-image: url('/gallatin.jpg');
+  max-height: 500px;
+  background-position: center;
 }
 
 
@@ -16,14 +18,13 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  
+  /* max-width: 100vw; */
   
 }
 
 body{
   background-color: seashell;
+  
 }
 
 a {
